Change assert in log.cpp on friendly aseert

--- a/log.html
+++ b/log.html
@@ -2,7 +2,7 @@
 "log.html" OPENING IS OK
 
 
-List[0x7ffdb81db8e0]
+List[0x7fff34b588c0]
 
 name    of var : <font color=Black>"test"
 </font>created in file: <font color=Black>"test.cpp"
@@ -10,7 +10,7 @@ name    of var : <font color=Black>"test"
 </font>created in line: 11
 
 List = {
-       data:           0x55b839284480
+       data:           0x55f00a47f480
        data_size:      6
        data_capacity:  8
                          
@@ -28,7 +28,7 @@ value: <font color=Black>0        </font><font color=Black>3        </font><font
  next: <font color=Black>1        </font><font color=Black>5        </font><font color=Black>3        </font><font color=Black>4        </font><font color=Black>0        </font><font color=Black>2        </font><font color=Black>7        </font><font color=Olive>NULL     </font>
  prev: <font color=Black>4        </font><font color=Black>0        </font><font color=Black>5        </font><font color=Black>2        </font><font color=Black>3        </font><font color=Black>1        </font><font color=Olive>NULL     </font><font color=Olive>NULL     </font>
 
-List[0x7ffdb81db8e0]
+List[0x7fff34b588c0]
 
 name    of var : <font color=Black>"test"
 </font>created in file: <font color=Black>"test.cpp"
@@ -36,7 +36,7 @@ name    of var : <font color=Black>"test"
 </font>created in line: 11
 
 List = {
-       data:           0x55b839284480
+       data:           0x55f00a47f480
        data_size:      6
        data_capacity:  8
                          
